# edr-agent

./: .gitignore  CMakeLists.txt  README.md  report_week1.md  report_week2.md  report_week3.md  report_week4.md  report_week5.md  report_week6.md  report_week7.md  report_week8.md  setup.sh
bpf/: dns_monitor.bpf.c  file_monitor.bpf.c  memory_monitor.bpf.c  network_monitor.bpf.c  ns_monitor.bpf.c  process_monitor.bpf.c
config/: edr-agent.service  known_hashes.txt  rules.yaml
demo/: 01_ldpreload.sh  02_fileless.sh  03_backdoor.sh  04_ptrace.sh  05_dns_tunnel.sh  edr-ctl.sh  evil_attach.c  run_demo.sh  run_demo_final.sh  stress_test.sh
demo/attack_scenarios/: 06_sensitive_path.sh  07_log_delete.sh  08_tmp_exec.sh  09_interpreter.sh  10_tmp_rename.sh  11_setuid.sh  12_tmp_correlation.sh
docs/: api_output_format.md
include/: common.h
src/: main.cpp  proc_tree.cpp  proc_tree.h
src/action/: action_server.cpp  action_server.h
src/anomaly/: behavior_profiler.cpp  behavior_profiler.h
src/correlation/: correlator.cpp  correlator.h
src/output/: http_reporter.cpp  http_reporter.h  json_fmt.cpp  json_fmt.h
src/rules/: rule_config.cpp  rule_config.h  rule_engine.cpp  rule_engine.h
src/threat_intel/: feed_manager.cpp  feed_manager.h  hash_checker.cpp  hash_checker.h  sha256.h
